--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
     "morgan": "^1.10.0",
-    "node-sass": "^9.0.0",
-    "sass": "^1.69.3"
+    "node-sass": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
