--- a/.github/workflows/travelomediait.js.yml
+++ b/.github/workflows/travelomediait.js.yml
@@ -5,8 +5,10 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
-  
+    branches: 
+      - main
+    paths:
+      - 'README.md'
 
 jobs:
   build:
@@ -16,15 +18,27 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: pm2 restart app.js
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build if present
+        run: npm run build --if-present
+
+      - name: Process README.md file
+        run: |
+          cat README.md # Example command to display the contents of README.md
+          # Add more commands here to process the README.md file as needed
+
+      - name: Restart application
+        run: pm2 restart app.js # Adjust this command based on your application's needs
